k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imagepod
  labels:
    name: imagepod
